--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -3,7 +3,7 @@
 # -----
 
 ## font_family
-font_family      Hack Nerd Font Mono
+font_family      JetBrains Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -34,7 +34,7 @@ scrollback_lines 2000
 
 ## scroll_multiplier (whell_scroll_multiplier is used for low precision devices,
 ## and touch_scroll_multiplier is for high precison)
-# whell_scroll_multiplier 5.0 
+# whell_scroll_multiplier 5.0
 touch_scroll_multiplier 1.0
 
 # -----
