update my config at 20220620

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -3,13 +3,13 @@
 # -----
 
 ## font_family
-font_family      JetBrains Mono
+font_family      Sarasa Mono SC Nerd
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
 ## font_size
-font_size 18
+font_size 19
 font_ltr no
 
 ## adjust_line_height,adjust_column_width
