some litte config

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -182,18 +182,18 @@ map cmd+k                clear_terminal reset active
 
 ## Window management
 # map ctrl+shift+enter   new_window
-map cmd+enter            new_window 🍎
+map ctrl+enter           new_window
 # map ctrl+shift+n       new_os_window
-map cmd+n                new_os_window 🍎
+map cmd+enter            new_os_window
 map ctrl+shift+w         close_window
 map ctrl+shift+]         next_window
 map ctrl+shift+[         previous_window
-map cmd+1                first_window 🍎
-map cmd+2                second_window 🍎
-map cmd+3                third_window 🍎
-map cmd+4                fourth_window 🍎
-map cmd+5                fifth_window 🍎
-map cmd+6                sixth_window 🍎
+map cmd+1                first_window
+map cmd+2                second_window
+map cmd+3                third_window
+map cmd+4                fourth_window
+map cmd+5                fifth_window
+map cmd+6                sixth_window
 
 
 
