--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,7 +1,7 @@
 # This TOML file include dotfiles from elsewhere
 # See Also: https://www.chezmoi.io/user-guide/include-files-from-elsewhere/
 
-
+# Download zsh-syntax-highlighting
 [".local/share/zsh/plugins/zsh-syntax-highlighting"]
     type = "archive"
     url = "https://github.com/zsh-users/zsh-syntax-highlighting/archive/refs/heads/master.tar.gz"
@@ -9,6 +9,7 @@
     stripComponents = 1
     refreshPeriod = "168h"
 
+# Download zsh-autosuggestions
 [".local/share/zsh/plugins/zsh-autosuggestions"]
     type = "archive"
     url = "https://github.com/zsh-users/zsh-autosuggestions/archive/refs/heads/master.tar.gz"
