--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,7 +1,7 @@
 # This TOML file include dotfiles from elsewhere
 # See Also: https://www.chezmoi.io/user-guide/include-files-from-elsewhere/
 
-# Download zsh-syntax-highlighting
+# zsh-syntax-highlighting
 [".local/share/zsh/plugins/zsh-syntax-highlighting"]
     type = "archive"
     url = "https://github.com/zsh-users/zsh-syntax-highlighting/archive/refs/heads/master.tar.gz"
@@ -9,7 +9,7 @@
     stripComponents = 1
     refreshPeriod = "168h"
 
-# Download zsh-autosuggestions
+# zsh-autosuggestions
 [".local/share/zsh/plugins/zsh-autosuggestions"]
     type = "archive"
     url = "https://github.com/zsh-users/zsh-autosuggestions/archive/refs/heads/master.tar.gz"
@@ -17,3 +17,10 @@
     stripComponents = 1
     refreshPeriod = "168h"
 
+# Powerlevel10k
+[".local/share/zsh/plugins/powerlevel10k"]
+    type = "archive"
+    url = "https://github.com/romkatv/powerlevel10k/archive/refs/heads/master.tar.gz"
+    exact = true
+    stripComponents = 1
+    refreshPeriod = "168h"
