--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -18,9 +18,9 @@
     refreshPeriod = "168h"
 
 # Powerlevel10k
-[".local/share/zsh/plugins/powerlevel10k"]
-    type = "archive"
-    url = "https://github.com/romkatv/powerlevel10k/archive/refs/heads/master.tar.gz"
-    exact = true
-    stripComponents = 1
-    refreshPeriod = "168h"
+# [".local/share/zsh/plugins/powerlevel10k"]
+#    type = "archive"
+#    url = "https://github.com/romkatv/powerlevel10k/archive/refs/heads/master.tar.gz"
+#    exact = true
+#    stripComponents = 1
+#    refreshPeriod = "168h"
