--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -980,7 +980,7 @@ inactive_tab_font_style normal
 
 #: The foreground and background colors.
 
-background_opacity 0.9
+background_opacity 0.95
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -2213,6 +2213,6 @@ map shift+cmd+/ open_url https://sw.kovidgoyal.net/kitty/
 
 
 # BEGIN_KITTY_THEME
-# duckbones
+# Dark One Nuanced
 include current-theme.conf
 # END_KITTY_THEME
